--- a/includes/header.html
+++ b/includes/header.html
@@ -105,13 +105,13 @@
             Недвижимость
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="загородная недвижимость.html">Загородная недвижимость</a></li>
+            <li><a class="dropdown-item" href="zagorodnaya-nedvizhimost-stub.html">Загородная недвижимость</a></li>
             <li><a class="dropdown-item" href="наши обьекты.html">Наши объекты</a></li>
-            <li><a class="dropdown-item" href="камерческая недвижимость.html">Коммерческая недвижимость</a></li>
+            <li><a class="dropdown-item" href="kommercheskaya-nedvizhimost-stub.html">Коммерческая недвижимость</a></li>
           </ul>
         </li>
         <li class="nav-item"><a class="nav-link" href="новостройки.html">Новостройки</a></li>
-        <li class="nav-item"><a class="nav-link" href="blog.html">Блог</a></li>
+        <li class="nav-item"><a class="nav-link" href="blog-stub.html">Блог</a></li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Юридическая
@@ -121,8 +121,7 @@
             <li><a class="dropdown-item" href="о компании.html">О компании</a></li>
             <li><a class="dropdown-item" href="сотрудники.html">Сотрудники</a></li>
             <li><a class="dropdown-item" href="тарифная сетка.html">Тарифная сетка</a></li>
-            <li><a class="dropdown-item" href="учередители.html">Учредители</a></li>
-            <li><a class="dropdown-item" href="калькулятор-ипотеки.html">Калькулятор ипотеки</a></li>
+            <li><a class="dropdown-item" href="kalkulyator-ipoteki-stub.html">Калькулятор ипотеки</a></li>
           </ul>
         </li>
         <li class="nav-item"><a class="nav-link" href="#contact">Контакты</a></li>
@@ -137,5 +136,3 @@
     </div>
   </div>
 </nav>
-
-
